cleaning and finishing authentification routes + test
