# src/models/users.ts
@@ -6,6 +6,9 @@ module.exports = (sequelize, DataTypes) => {
         email: {
             type: DataTypes.STRING
         },
+        password: {
+            type: DataTypes.STRING
+        },
         role: {
             type: DataTypes.INTEGER
         }
